--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MP3</string>
-    <string name="MP3">&lt;/MP3</string>
+    <string name="app_name">mp3</string>
+    <string name="mp3">&lt;/mp3</string>
     <string name="welcome">Welcome!</string>
     <string name="signup_message">Sign up</string>
     <string name="email">Email</string>
